--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -11,15 +11,17 @@
       <th scope="col" sortable="name" (sort)="onSort($event)">Name</th>
       <th scope="col" sortable="phone" (sort)="onSort($event)">Phone</th>
       <th scope="col" sortable="currency" (sort)="onSort($event)">Currency</th>
+      <th scope="col" sortable="action" (sort)="onSort($event)">Action</th>
     </tr>
   </thead>
   <tbody>
-    <tr  *ngFor="let country of countrys ; let i = index">
+    <tr  *ngFor="let country of countriesArray ; let i = index">
       <td>{{country.id}}</td>
       <td>{{country.code}}</td>
       <td>{{country.name}}</td>
       <td>{{country.phone}}</td>
       <td>{{country.currency}}</td>
+  <td><button class="btn btn-outline-success" (click)="openVerticallyCentered(viewCountry, country.code)" >View</button></td>
     </tr>
   </tbody>
 
@@ -34,4 +36,28 @@
       <option [ngValue]="10">10 items per page</option>
       <option [ngValue]="20">20 items per page</option>
     </select>
+</div>
+
+jjj   {{oneCountry | json}}
+
+<ng-template #viewCountry let-modal>
+  <div class="modal-header bg-info">
+    <h4 class="modal-title">Country</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
+  <div class="modal-body">
+    <table class="table table-hover table-stripped text-center" >
+      <tr><th>Name</th><td>{{oneCountry.name}}</td></tr>
+         <tr><th>Code</th><td>{{oneCountry.code}}</td></tr>
+          <tr><th>Phone</th><td>{{oneCountry.phone}}</td></tr>
+          <tr><th>Currency</th><td>{{oneCountry.currency}}</td></tr>
+          <tr><th>Action</th><td>{{oneCountry.action}}</td></tr>
+    </table>
+  </div>
+  <div class="modal-footer bg-info">
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+  </div>
+</ng-template>
+
