--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,5 +1,10 @@
-<p class="lead text-center">Graphql Example</p>
 
+<br>
+
+  <div class="row col-4 mx-auto">
+       <input class="form-control ml-2" name="search" placeholder="Search..." type="text" [(ngModel)]="myfilter"/>
+  </div>
+  <br>
 
 <span *ngIf="loading"> loading ... </span>
 
@@ -11,34 +16,34 @@
       <th scope="col" sortable="name" (sort)="onSort($event)">Name</th>
       <th scope="col" sortable="phone" (sort)="onSort($event)">Phone</th>
       <th scope="col" sortable="currency" (sort)="onSort($event)">Currency</th>
-      <th scope="col" sortable="launguage" (sort)="onSort($event)">Launguage</th>
+      <th scope="col" sortable="language" (sort)="onSort($event)">Language</th>
       <th scope="col" sortable="action" (sort)="onSort($event)">Action</th>
     </tr>
   </thead>
   <tbody>
-    <tr  *ngFor="let country of countriesArray ; let i = index">
+    <tr  *ngFor="let country of countriesArray  | filter : myfilter ; let i = index">
       <td>{{country.id}}</td>
       <td>{{country.code}}</td>
       <td>{{country.name}}</td>
       <td>{{country.phone}}</td>
       <td>{{country.currency}}</td>
-      <td>  <span *ngFor="let language of country.languages" class=" btn btn-sm btn-outline-primary m-1" (click)="openLanguageModal(viewLanguage, language.code)" style="cursor: pointer;" > 
-        {{language.name}} 
+      <td>  <span *ngFor="let language of country.languages" class=" btn btn-sm btn-outline-primary m-1" (click)="openLanguageModal(viewLanguage, language.code)" style="cursor: pointer; border: 0" >
+        {{language.name}}
       </span>  </td>
-  <td><button class="btn btn-outline-success" (click)="openVerticallyCentered(viewCountry, country.code)" >View</button></td>
+  <td><button class="btn btn-outline-success" (click)="openContryModal(viewCountry, country.code)" >View</button></td>
     </tr>
   </tbody>
 
 </table>
 
-<div class="d-flex justify-content-between p-2">
+<div class="row justify-content-between p-2">
     <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
     </ngb-pagination>
 
     <select class="custom-select" style="width: auto" [(ngModel)]="pageSize">
-      <option [ngValue]="5">5 items per page</option>
       <option [ngValue]="10">10 items per page</option>
       <option [ngValue]="20">20 items per page</option>
+      <option [ngValue]="30">30 items per page</option>
     </select>
 </div>
 
@@ -56,7 +61,9 @@
          <tr><th>Code</th><td>{{oneCountry.code}}</td></tr>
           <tr><th>Phone</th><td>{{oneCountry.phone}}</td></tr>
           <tr><th>Currency</th><td>{{oneCountry.currency}}</td></tr>
-          <tr><th>Action</th><td>{{oneCountry.action}}</td></tr>
+          <tr><th>Language</th><th>  <span *ngFor="let language of oneCountry.languages" class=" btn btn-sm btn-outline-primary m-1"  (click)="openLanguageModal(viewLanguage, language.code)"   style="cursor: pointer; border: 0" >
+            {{language.name}}
+          </span>  </th></tr>
     </table>
   </div>
   <div class="modal-footer bg-info">
@@ -77,7 +84,7 @@
       <tr><th>Name</th><td>{{oneLanguage.name}}</td></tr>
          <tr><th>Code</th><td>{{oneLanguage.code}}</td></tr>
           <tr><th>Native</th><td>{{oneLanguage.native}}</td></tr>
-         
+
     </table>
   </div>
   <div class="modal-footer bg-info">
